Replace DuckDB with SQLite/PostgreSQL/MySQL support
- Remove DuckDB (OLAP) implementation
- Add SQLiteDatabase (default, for development)
- Add PostgreSQLDatabase (for production)
- Add MySQLDatabase (for production)
- Update factory.py to support all three databases
- Update requirements.txt (add psycopg2-binary, pymysql)
- Update .env.example with database configurations
- Update docker-compose.yml to use SQLite by default
- Update settings.py with database configuration

DuckDB is optimized for analytics (OLAP) not transactions (OLTP).
For user systems requiring ACID transactions, SQLite/PostgreSQL/MySQL are better choices.

🐊 DahSchnappi

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,28 @@
 # 应用配置
-APP_NAME=Work Log System
+APP_NAME=DahSchnappi
 APP_VERSION=1.0.0
 DEBUG=true
 
-# 数据库配置
-DATABASE_IMPLEMENTATION=duckdb
-DUCKDB_PATH=data/worklog.db
+# 数据库配置 (可选: sqlite, postgresql, mysql)
+DATABASE_IMPLEMENTATION=sqlite
+
+# SQLite 配置 (默认，适合开发/中小规模)
+SQLITE_PATH=data/dahschnappi.db
+
+# PostgreSQL 配置 (生产环境推荐)
+# POSTGRES_HOST=localhost
+# POSTGRES_PORT=5432
+# POSTGRES_DATABASE=dahschnappi
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=your-postgres-password
+
+# MySQL 配置 (生产环境)
+# MYSQL_HOST=localhost
+# MYSQL_PORT=3306
+# MYSQL_DATABASE=dahschnappi
+# MYSQL_USER=root
+# MYSQL_PASSWORD=your-mysql-password
+# MYSQL_CHARSET=utf8mb4
 
 # 缓存配置
 CACHE_IMPLEMENTATION=memory
