--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -19,8 +19,10 @@ passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 
 # Database
-duckdb==0.10.0
-sqlalchemy==2.0.35
+# SQLite (内置，无需安装)
+psycopg2-binary==2.9.9        # PostgreSQL
+pymysql==1.1.0               # MySQL
+sqlalchemy==2.0.35           # ORM (可选)
 
 # Cache
 cachetools==5.3.3
